# swagger/swagger.yml
@@ -16,7 +16,7 @@ paths:
       tags:
       - task
       description: get task by taskId
-      operationId: TaskController.查询已发布任务列表
+      operationId: TaskController.查询当前所有未结束的任务
       parameters:
       - in: header
         name: session
@@ -32,6 +32,28 @@ paths:
         name: keyword
         description: search by labels
         type: string
+      responses:
+        "200":
+          description: '{[object]} models.Task'
+        "403":
+          description: :taskId is empty
+  /task/publisher:
+    get:
+      tags:
+      - task
+      description: get task by taskId
+      operationId: TaskController.查询自己发布任务列表
+      parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
+      - in: query
+        name: page
+        description: page value,default is 1
+        required: true
+        type: integer
       responses:
         "200":
           description: '{[object]} models.Task'
@@ -61,12 +83,12 @@ paths:
             $ref: '#/definitions/controllers.CreateTaskReturnCode'
         "403":
           description: body is empty
-  /task/{taskId}:
+  /task/publisher/{taskId}:
     get:
       tags:
       - task
       description: get task by taskId
-      operationId: TaskController.查询指定id的任务
+      operationId: TaskController.查询自己已经发布的指定id的任务
       parameters:
       - in: path
         name: taskId
@@ -132,29 +154,7 @@ paths:
             $ref: '#/definitions/controllers.HttpResponseCode'
         "403":
           description: taskId is empty
-  /task/acceptance:
-    get:
-      tags:
-      - task
-      description: get task by taskId
-      operationId: TaskController.查询自己已接受任务列表
-      parameters:
-      - in: header
-        name: session
-        description: user's session ,get from login
-        required: true
-        type: string
-      - in: query
-        name: page
-        description: page value,default is 1
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: '{[object]} models.Task'
-        "403":
-          description: :taskId is empty
-  /task/confirm/{taskId}:
+  /task/publisher/confirm/{taskId}:
     get:
       tags:
       - task
@@ -191,6 +191,12 @@ paths:
         description: 任务id
         required: true
         type: integer
+      - in: body
+        name: body
+        description: main data is the user
+        required: true
+        schema:
+          $ref: '#/definitions/PublisherConfirmTaskData'
       responses:
         "200":
           description: ""
@@ -198,12 +204,12 @@ paths:
             $ref: '#/definitions/controllers.HttpResponseCode'
         "403":
           description: '{object} controllers.HttpResponseCode'
-  /task/release:
+  /task/recipient:
     get:
       tags:
       - task
       description: get task by taskId
-      operationId: TaskController.查询自己发布任务列表
+      operationId: TaskController.查询自己已接受任务列表
       parameters:
       - in: header
         name: session
@@ -215,12 +221,58 @@ paths:
         description: page value,default is 1
         required: true
         type: integer
+      - in: query
+        name: keyword
+        description: search by labels
+        type: string
       responses:
         "200":
           description: '{[object]} models.Task'
         "403":
           description: :taskId is empty
-  /task/settleup/{taskId}:
+  /task/recipient/{taskId}:
+    get:
+      tags:
+      - task
+      description: get task by taskId
+      operationId: TaskController.查询指定id的任务
+      parameters:
+      - in: path
+        name: taskId
+        description: the key
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Task'
+        "403":
+          description: :taskId is empty
+    post:
+      tags:
+      - task
+      description: user accept the task
+      operationId: TaskController.接受任务
+      parameters:
+      - in: header
+        name: session
+        description: user's session ,get from login
+        required: true
+        type: string
+      - in: path
+        name: taskId
+        description: 任务id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/controllers.HttpResponseCode'
+        "403":
+          description: '{object} controllers.HttpResponseCode'
+  /task/recipient/settleup/{taskId}:
     get:
       tags:
       - task
@@ -265,30 +317,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/binary'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/controllers.HttpResponseCode'
-        "403":
-          description: '{object} controllers.HttpResponseCode'
-  /task/task/accept/{taskId}:
-    post:
-      tags:
-      - task
-      description: user accept the task
-      operationId: TaskController.接受任务
-      parameters:
-      - in: header
-        name: session
-        description: user's session ,get from login
-        required: true
-        type: string
-      - in: path
-        name: taskId
-        description: 任务id
-        required: true
-        type: integer
       responses:
         "200":
           description: ""
@@ -409,6 +437,9 @@ paths:
         "403":
           description: user not exist
 definitions:
+  PublisherConfirmTaskData:
+    title: PublisherConfirmTaskData
+    type: object
   binary:
     title: binary
     type: object
@@ -521,7 +552,7 @@ definitions:
     - Task_ac_pend = "ac_pending"
     - Task_ac_do = "ac_doing"
     - Task_ac_check = "ac_checking"
-    - Task_ac_other = "ac_other"
+    - Task_ac_finish = "ac_finish"
     - Task_rel_pend = "rel_pending"
     - Task_rel_do = "rel_doing"
     - Task_rel_finish = "rel_finishing"
